@@ -1,2 +1,3 @@
 [B]Version 1.1.136[/B]
 - javguru: fix listing, actress - nextpage
+- xvideospanish: removed
